// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`multiline.html.eex 1`] = `
====================================options=====================================
parsers: ["eex"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div>
  <%= link
   %>
</div>

=====================================output=====================================
<div>
  <%= link %>
</div>

================================================================================
`;

exports[`only_html.html.eex 1`] = `
====================================options=====================================
parsers: ["eex"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div class="ss   ss   "   >
  <h2
    >
    </h2></div>

=====================================output=====================================
<div class="ss ss">
  <h2></h2>
</div>

================================================================================
`;
